		Added conditional compile for stat() being available.
3.3.44	16feb13	gdk_draw_layout assertion `GDK_IS_DRAWABLE (drawable)'
		assertion fix.
3.3.45	28feb13	Fix for VCDNAM_ESCAPE character in treesearch window.  This 
		sometimes occurs for structure identifiers.
3.3.46	29apr13	Upgraded to autoconf 2.69.
		Fixed as of yet undetected hdr_incomplete bug when running off
		end of FST file.  (e.g., while file is being written)
		Fixed problem with is_gtkw_save_file getting wiped out on
		reload.
		Updated Mac bundle info to reflect new autoconf filenames.
3.3.47	14may13	Fix for crash in 64-bit mode with array accesses in
		deprecated loader.
		Partial VCD loader fix for small files.
		Added preliminary do-nothing generate support in vermin.
		Fixed minmax_valid for partial VCD loader: affects scaling
		on floating-point traces.
3.3.48	30jul13	Fixed infinite loop hang on various helpers executables
		when extra arguments are specified.
		Delete changed marker name if it exists when marker is removed.
		Added "Open Hierarchy" option that will expand the SST and
		select the hierarchy for a given signal selected in the
		Signals window.
		Added preliminary support for FsdbReader.
		FSDB fix for generate created hierarchies.
		FSDB fix for new debug info output style to be parsed.
		Added generate as scope type to VCD/FST/FSDB.
		Preliminary add for module port direction for FSDB and FST.
		Display signal direction column in SST if not all signals are 
		declared as FST_VD_IMPLICIT.
		Fixed GTK warning when hide_sst is enabled and SST is opened
		then closed.
		Added extraction of in/out/inout from FSDB into FST with
		vcd2fst helper executable.  (It also converts FSDB to FST.)
		Added support for SV structures, unions, classes, packages,
		programs, and interfaces.
		Updated signal parsing in FST/FSDB to handle NC declarations
		for arrays in VCD.  (i.e., bitranges are missing)  Use vcd2fst
		or the -o option to read NC VCD files with arrays properly.