@@ -1314,3 +1314,5 @@
 		Updated signal parsing in FST/FSDB to handle NC declarations
 		for arrays in VCD.  (i.e., bitranges are missing)  Use vcd2fst
 		or the -o option to read NC VCD files with arrays properly.
+		Preliminary support for SV datatypes of bit, logic, int,
+		shortint, longint, byte, enum, and shortreal.
